Introduce new language service features
This change introduces the following language service features:

- Finding references of symbols in a file
- Finding occurences of symbols in a file
- Showing parameter hints for a command
- Finding the definition of a command or variable
- Getting the details of a specific completion result

All of these features are also exposed through the stdio transport

--- a/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
+++ b/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
@@ -79,12 +79,23 @@
     <Compile Include="Message\MessageWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request\ChangeFileRequest.cs" />
+    <Compile Include="Request\CompletionDetailsRequest.cs" />
     <Compile Include="Request\CompletionsRequest.cs" />
+    <Compile Include="Request\DeclarationRequest.cs" />
     <Compile Include="Request\ErrorRequest.cs" />
     <Compile Include="Request\FileRequest.cs" />
+    <Compile Include="Request\OccurrencesRequest.cs" />
     <Compile Include="Request\OpenFileRequest.cs" />
+    <Compile Include="Request\ReferencesRequest.cs" />
     <Compile Include="Request\ReplExecuteRequest.cs" />
     <Compile Include="Request\RequestBase.cs" />
+    <Compile Include="Response\CompletionDetailsResponse.cs" />
+    <Compile Include="Response\DefinitionResponse.cs" />
+    <Compile Include="Response\LocationResponseElements.cs" />
+    <Compile Include="Response\OccurrencesResponse.cs" />
+    <Compile Include="Response\ReferencesResponse.cs" />
+    <Compile Include="Response\SignatureHelpResponse.cs" />
+    <Compile Include="Request\SignatureHelpRequest.cs" />
     <Compile Include="Response\CompletionsResponse.cs" />
     <Compile Include="Response\MessageErrorResponse.cs" />
     <Compile Include="Response\ReplPromptChoiceResponse.cs" />
