--- a/test/PowerShellEditorServices.Test.Shared/PowerShellEditorServices.Test.Shared.csproj
+++ b/test/PowerShellEditorServices.Test.Shared/PowerShellEditorServices.Test.Shared.csproj
@@ -42,7 +42,15 @@
     <Compile Include="Completion\CompleteCommandFromModule.cs" />
     <Compile Include="Completion\CompleteCommandInFile.cs" />
     <Compile Include="Completion\CompleteVariableInFile.cs" />
+    <Compile Include="Definition\FindsFunctionDefinition.cs" />
+    <Compile Include="Definition\FindsVariableDefinition.cs" />
+    <Compile Include="Occurrences\FindOccurrencesOnParameter.cs" />
+    <Compile Include="Occurrences\FindsOccurrencesOnFunction.cs" />
+    <Compile Include="ParameterHints\FindsParameterSetsOnCommand.cs" />
+    <Compile Include="ParameterHints\FindsParameterSetsOnCommandWithSpaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="References\FindsReferencesOnFunction.cs" />
+    <Compile Include="References\FindsReferencesOnVariable.cs" />
     <Compile Include="Utility\ResourceFileLoader.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -54,6 +62,17 @@
       <Name>PowerShellEditorServices</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ParameterHints\ParamHints.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="References\SimpleFile.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
