Fix #2 - Message types should be auto-registered
This change completes the work to have all Transport.Stdio message types
be marked with a MessageTypeNameAttribute.  This attribute specifies
the name used to identify the type in the JSON messages that are sent
between client and editor service.

The MessageTypeResolver also validates whether a message type is decorated
with an attribute and throws a debug assert if it is missing.  This helps
message type authors remember to add the attribute so that everything works
correctly.

Finally, all existing message types have been updated to follow the new
message type decoration pattern.

--- a/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
+++ b/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
@@ -63,18 +63,19 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Event\DiagnosticEvent.cs" />
     <Compile Include="Event\EventBase.cs" />
-    <Compile Include="Event\IEvent.cs" />
+    <Compile Include="Event\ReplPromptChoiceEvent.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Event\ReplWriteOutputEvent.cs" />
-    <Compile Include="Event\ReplPromptChoiceEvent.cs" />
     <Compile Include="Event\StartedEvent.cs" />
-    <Compile Include="Message\IMessage.cs" />
     <Compile Include="Message\IMessageProcessor.cs" />
     <Compile Include="Message\MessageBase.cs" />
     <Compile Include="Message\MessageFormat.cs" />
     <Compile Include="Message\MessageParseException.cs" />
     <Compile Include="Message\MessageParser.cs" />
     <Compile Include="Message\MessageReader.cs" />
-    <Compile Include="Message\MessageTypeAttribute.cs" />
+    <Compile Include="Message\MessageType.cs" />
+    <Compile Include="Message\MessageTypeNameAttribute.cs" />
     <Compile Include="Message\MessageTypeResolver.cs" />
     <Compile Include="Message\MessageWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
