--- a/test/PowerShellEditorServices.Test.Transport.Stdio/PowerShellEditorServices.Test.Transport.Stdio.csproj
+++ b/test/PowerShellEditorServices.Test.Transport.Stdio/PowerShellEditorServices.Test.Transport.Stdio.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Message\MessageReaderWriterTests.cs" />
+    <Compile Include="Message\MessageTypeResolverTests.cs" />
+    <Compile Include="Message\TestMessageTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
