Eliminate API leakage of some PowerShell types
This change introduces new types that wrap/replace the types
from System.Management.Automation which should not be exposed
outside of the core Editor Services library.  The reasoning is
that a consumer of our higher-level service types through an
EditorSession should not have to take a dependency on the
System.Management.Automation assembly (since this may become
more complicated in the future).  This also gives us a chance to
reshape the information that we return from API calls so that we
can provide extra value in some places and remove unneeded
information in others.

Going forward we will carefully monitor any new function
signatures to ensure that core PowerShell types aren't being
exposed through the abstraction unnecessarily.

--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -59,14 +59,17 @@
   <ItemGroup>
     <Compile Include="Analysis\AnalysisOutputWriter.cs" />
     <Compile Include="Analysis\AnalysisService.cs" />
+    <Compile Include="Console\ChoiceDetails.cs" />
     <Compile Include="Console\ConsoleServicePSHost.cs" />
     <Compile Include="Console\ConsoleServicePSHostRawUserInterface.cs" />
     <Compile Include="Console\ConsoleServicePSHostUserInterface.cs" />
     <Compile Include="Console\OutputType.cs" />
+    <Compile Include="Console\ProgressDetails.cs" />
     <Compile Include="Console\SynchronizingConsoleHostWrapper.cs" />
     <Compile Include="Console\IConsoleHost.cs" />
     <Compile Include="IHost.cs" />
     <Compile Include="Language\AstOperations.cs" />
+    <Compile Include="Language\CompletionResults.cs" />
     <Compile Include="Language\LanguageService.cs" />
     <Compile Include="Language\ScriptExtent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -75,6 +78,7 @@
     <Compile Include="Session\ScriptFile.cs" />
     <Compile Include="Session\FileChange.cs" />
     <Compile Include="Session\ScriptFileMarker.cs" />
+    <Compile Include="Session\ScriptRegion.cs" />
     <Compile Include="Utility\Validate.cs" />
   </ItemGroup>
   <ItemGroup>
