--- a/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
+++ b/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
@@ -60,11 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Console\TestConsoleHost.cs" />
+    <Compile Include="Language\LanguageServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Language\AstOperationTests.cs" />
     <Compile Include="Console\ConsoleServiceTests.cs" />
     <Compile Include="Session\FileChangeTests.cs" />
-    <Compile Include="Utility\ResourceFileLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -75,13 +74,15 @@
       <Project>{81e8cbcd-6319-49e7-9662-0475bd0791f4}</Project>
       <Name>PowerShellEditorServices</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PowerShellEditorServices.Test.Shared\PowerShellEditorServices.Test.Shared.csproj">
+      <Project>{6a20b9e9-de66-456e-b4f5-acfd1a95c3ca}</Project>
+      <Name>PowerShellEditorServices.Test.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TestFiles\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
