Add Workspace class to manage open session files
This change introduces the Workspace class which is responsible for
managing the set of open files in a session.  This class is also
responsible for resolving a script's references to other scripts and
handling the necessary file operations so that those references scripts
can be used for service operations.

--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Session\FileChange.cs" />
     <Compile Include="Session\ScriptFileMarker.cs" />
     <Compile Include="Session\ScriptRegion.cs" />
+    <Compile Include="Session\Workspace.cs" />
     <Compile Include="Utility\Validate.cs" />
   </ItemGroup>
   <ItemGroup>
