--- a/test/PowerShellEditorServices.Test.Shared/PowerShellEditorServices.Test.Shared.csproj
+++ b/test/PowerShellEditorServices.Test.Shared/PowerShellEditorServices.Test.Shared.csproj
@@ -50,7 +50,9 @@
     <Compile Include="ParameterHints\FindsParameterSetsOnCommand.cs" />
     <Compile Include="ParameterHints\FindsParameterSetsOnCommandWithSpaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="References\FindsReferencesOnBuiltInCommandWithAlias.cs" />
     <Compile Include="References\FindsReferencesOnFunction.cs" />
+    <Compile Include="References\FindsReferencesOnFunctionMultiFileDotSource.cs" />
     <Compile Include="References\FindsReferencesOnVariable.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +73,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="References\FileWithReferences.ps1" />
+    <None Include="References\ReferenceFileA.ps1" />
+    <None Include="References\ReferenceFileB.ps1" />
+    <None Include="References\ReferenceFileC.ps1" />
     <None Include="References\SimpleFile.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
