Add basic diagnostic logging support
This change adds basic logging support to the Editor Services console host
for diagnostic output.  It also includes some basic tests to verify the
logging capabilities.  This logging framework may be switched out in the
future for a more robust solution.

--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Session\ScriptFileMarker.cs" />
     <Compile Include="Session\ScriptRegion.cs" />
     <Compile Include="Session\Workspace.cs" />
+    <Compile Include="Utility\Logger.cs" />
     <Compile Include="Utility\Validate.cs" />
   </ItemGroup>
   <ItemGroup>
