Fix final issues before preview release
- Send TerminatedEvent from debug service when script execution completes
- Set VariableDetails value string to space when extendable (VS Code bug)
- Add ExecutionPolicy setting for machines with higher default setting
- Add extensive logging in PowerShellSession

--- a/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
+++ b/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Event\ReplWriteOutputEvent.cs" />
     <Compile Include="Event\StartedEvent.cs" />
     <Compile Include="Event\StoppedEvent.cs" />
+    <Compile Include="Event\TerminatedEvent.cs" />
     <Compile Include="Message\IMessageProcessor.cs" />
     <Compile Include="Message\MessageBase.cs" />
     <Compile Include="Message\MessageParseException.cs" />
