--- a/test/PowerShellEditorServices.Test.Shared/PowerShellEditorServices.Test.Shared.csproj
+++ b/test/PowerShellEditorServices.Test.Shared/PowerShellEditorServices.Test.Shared.csproj
@@ -57,7 +57,7 @@
     <Compile Include="SymbolDetails\FindsDetailsForBuiltInCommand.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Completion\CompletionExamples.ps1">
+    <None Include="Completion\CompletionExamples.psm1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Debugging\VariableTest.ps1" />
