Introduce OutputEvent and command eval in debugger
This change introduces the new OutputEvent which allows the the language
and debugging services to send script output text to the client to be
displayed to the user.  Currently this is used in VS Code's Debug Console
but could be used in other contexts as well.

This change also enables the user to evaluate PowerShell commands while
stopped in the debugger to aid in debugging.  In the future this will be
expanded to allow commands to be executed at any time.

--- a/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
+++ b/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Event\EventBase.cs" />
     <Compile Include="Event\ExitedEvent.cs" />
     <Compile Include="Event\InitializedEvent.cs" />
+    <Compile Include="Event\OutputEvent.cs" />
     <Compile Include="Event\ReplPromptChoiceEvent.cs">
       <SubType>Code</SubType>
     </Compile>
