--- a/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
+++ b/src/PowerShellEditorServices.Transport.Stdio/PowerShellEditorServices.Transport.Stdio.csproj
@@ -59,95 +59,89 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants.cs" />
-    <Compile Include="Event\DiagnosticEvent.cs" />
-    <Compile Include="Event\EventBase.cs" />
-    <Compile Include="Event\ExitedEvent.cs" />
-    <Compile Include="Event\InitializedEvent.cs" />
-    <Compile Include="Event\OutputEvent.cs" />
-    <Compile Include="Event\ReplPromptChoiceEvent.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Event\ReplWriteOutputEvent.cs" />
-    <Compile Include="Event\StartedEvent.cs" />
-    <Compile Include="Event\StoppedEvent.cs" />
-    <Compile Include="Event\TerminatedEvent.cs" />
-    <Compile Include="Message\IMessageProcessor.cs" />
-    <Compile Include="Message\MessageBase.cs" />
-    <Compile Include="Message\MessageParseException.cs" />
-    <Compile Include="Message\MessageParser.cs" />
-    <Compile Include="Message\MessageReader.cs" />
-    <Compile Include="Message\MessageType.cs" />
-    <Compile Include="Message\MessageTypeNameAttribute.cs" />
-    <Compile Include="Message\MessageTypeResolver.cs" />
-    <Compile Include="Message\MessageWriter.cs" />
-    <Compile Include="Model\Breakpoint.cs" />
-    <Compile Include="Model\Message.cs" />
-    <Compile Include="Model\Scope.cs" />
-    <Compile Include="Model\Source.cs" />
-    <Compile Include="Model\StackFrame.cs" />
-    <Compile Include="Model\Thread.cs" />
-    <Compile Include="Model\Variable.cs" />
+    <Compile Include="MessageProtocol\Constants.cs" />
+    <Compile Include="DebugAdapter\MessageBase.cs" />
+    <Compile Include="DebugAdapter\MessageType.cs" />
+    <Compile Include="LanguageServer\DiagnosticEvent.cs" />
+    <Compile Include="DebugAdapter\EventBase.cs" />
+    <Compile Include="DebugAdapter\ExitedEvent.cs" />
+    <Compile Include="DebugAdapter\InitializedEvent.cs" />
+    <Compile Include="DebugAdapter\OutputEvent.cs" />
+    <Compile Include="DebugAdapter\StartedEvent.cs" />
+    <Compile Include="DebugAdapter\StoppedEvent.cs" />
+    <Compile Include="DebugAdapter\TerminatedEvent.cs" />
+    <Compile Include="MessageProtocol\MessageParseException.cs" />
+    <Compile Include="MessageProtocol\MessageReader.cs" />
+    <Compile Include="MessageProtocol\MessageTypeNameAttribute.cs" />
+    <Compile Include="MessageProtocol\MessageTypeResolver.cs" />
+    <Compile Include="MessageProtocol\MessageWriter.cs" />
+    <Compile Include="MessageProtocol\IMessageProcessor.cs" />
+    <Compile Include="DebugAdapter\MessageParser.cs" />
+    <Compile Include="DebugAdapter\Breakpoint.cs" />
+    <Compile Include="DebugAdapter\Message.cs" />
+    <Compile Include="DebugAdapter\Scope.cs" />
+    <Compile Include="DebugAdapter\Source.cs" />
+    <Compile Include="DebugAdapter\StackFrame.cs" />
+    <Compile Include="DebugAdapter\Thread.cs" />
+    <Compile Include="DebugAdapter\Variable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Request\AttachRequest.cs" />
-    <Compile Include="Request\ChangeFileRequest.cs" />
-    <Compile Include="Request\CloseFileRequest.cs" />
-    <Compile Include="Request\CompletionDetailsRequest.cs" />
-    <Compile Include="Request\CompletionsRequest.cs" />
-    <Compile Include="Request\ContinueRequest.cs" />
-    <Compile Include="Request\DeclarationRequest.cs" />
-    <Compile Include="Request\DisconnectRequest.cs" />
-    <Compile Include="Request\ErrorRequest.cs" />
-    <Compile Include="Request\EvaluateRequest.cs" />
-    <Compile Include="Request\FileRequest.cs" />
-    <Compile Include="Request\InitializeRequest.cs" />
-    <Compile Include="Request\LaunchRequest.cs" />
-    <Compile Include="Request\NextRequest.cs" />
-    <Compile Include="Request\OccurrencesRequest.cs" />
-    <Compile Include="Request\OpenFileRequest.cs" />
-    <Compile Include="Request\PauseRequest.cs" />
-    <Compile Include="Request\QuickInfoRequest.cs" />
-    <Compile Include="Request\ReferencesRequest.cs" />
-    <Compile Include="Request\ReplExecuteRequest.cs" />
-    <Compile Include="Request\RequestBase.cs" />
-    <Compile Include="Request\ScopesRequest.cs" />
-    <Compile Include="Request\SetBreakpointsRequest.cs" />
-    <Compile Include="Request\SetExceptionBreakpointsRequest.cs" />
-    <Compile Include="Request\SourceRequest.cs" />
-    <Compile Include="Request\StackTraceRequest.cs" />
-    <Compile Include="Request\StepInRequest.cs" />
-    <Compile Include="Request\StepOutRequest.cs" />
-    <Compile Include="Request\ThreadsRequest.cs" />
-    <Compile Include="Request\VariablesRequest.cs" />
-    <Compile Include="Response\AttachResponse.cs" />
-    <Compile Include="Response\CompletionDetailsResponse.cs" />
-    <Compile Include="Response\ContinueResponse.cs" />
-    <Compile Include="Response\DefinitionResponse.cs" />
-    <Compile Include="Response\DisconnectResponse.cs" />
-    <Compile Include="Response\ErrorResponse.cs" />
-    <Compile Include="Response\EvaluateResponse.cs" />
-    <Compile Include="Response\InitializeResponse.cs" />
-    <Compile Include="Response\LaunchResponse.cs" />
-    <Compile Include="Response\LocationResponseElements.cs" />
-    <Compile Include="Response\NextResponse.cs" />
-    <Compile Include="Response\OccurrencesResponse.cs" />
-    <Compile Include="Response\QuickInfoResponse.cs" />
-    <Compile Include="Response\ReferencesResponse.cs" />
-    <Compile Include="Response\ScopesResponse.cs" />
-    <Compile Include="Response\SetBreakpointsResponse.cs" />
-    <Compile Include="Response\SetExceptionBreakpointsResponse.cs" />
-    <Compile Include="Response\SignatureHelpResponse.cs" />
-    <Compile Include="Request\SignatureHelpRequest.cs" />
-    <Compile Include="Response\CompletionsResponse.cs" />
-    <Compile Include="Response\MessageErrorResponse.cs" />
-    <Compile Include="Response\ReplPromptChoiceResponse.cs" />
-    <Compile Include="Response\ResponseBase.cs" />
-    <Compile Include="Response\SourceResponse.cs" />
-    <Compile Include="Response\StackTraceResponse.cs" />
-    <Compile Include="Response\StepInResponse.cs" />
-    <Compile Include="Response\StepOutResponse.cs" />
-    <Compile Include="Response\ThreadsResponse.cs" />
-    <Compile Include="Response\VariablesResponse.cs" />
+    <Compile Include="DebugAdapter\AttachRequest.cs" />
+    <Compile Include="LanguageServer\ChangeFileRequest.cs" />
+    <Compile Include="LanguageServer\CloseFileRequest.cs" />
+    <Compile Include="LanguageServer\CompletionDetailsRequest.cs" />
+    <Compile Include="LanguageServer\CompletionsRequest.cs" />
+    <Compile Include="DebugAdapter\ContinueRequest.cs" />
+    <Compile Include="LanguageServer\DeclarationRequest.cs" />
+    <Compile Include="DebugAdapter\DisconnectRequest.cs" />
+    <Compile Include="LanguageServer\ErrorRequest.cs" />
+    <Compile Include="DebugAdapter\EvaluateRequest.cs" />
+    <Compile Include="LanguageServer\FileRequest.cs" />
+    <Compile Include="LanguageServer\InitializeRequest.cs" />
+    <Compile Include="DebugAdapter\LaunchRequest.cs" />
+    <Compile Include="DebugAdapter\NextRequest.cs" />
+    <Compile Include="LanguageServer\OccurrencesRequest.cs" />
+    <Compile Include="LanguageServer\OpenFileRequest.cs" />
+    <Compile Include="DebugAdapter\PauseRequest.cs" />
+    <Compile Include="LanguageServer\QuickInfoRequest.cs" />
+    <Compile Include="LanguageServer\ReferencesRequest.cs" />
+    <Compile Include="LanguageServer\ReplExecuteRequest.cs" />
+    <Compile Include="DebugAdapter\RequestBase.cs" />
+    <Compile Include="DebugAdapter\ScopesRequest.cs" />
+    <Compile Include="DebugAdapter\SetBreakpointsRequest.cs" />
+    <Compile Include="DebugAdapter\SetExceptionBreakpointsRequest.cs" />
+    <Compile Include="DebugAdapter\SourceRequest.cs" />
+    <Compile Include="DebugAdapter\StackTraceRequest.cs" />
+    <Compile Include="DebugAdapter\StepInRequest.cs" />
+    <Compile Include="DebugAdapter\StepOutRequest.cs" />
+    <Compile Include="DebugAdapter\ThreadsRequest.cs" />
+    <Compile Include="DebugAdapter\VariablesRequest.cs" />
+    <Compile Include="DebugAdapter\AttachResponse.cs" />
+    <Compile Include="LanguageServer\CompletionDetailsResponse.cs" />
+    <Compile Include="DebugAdapter\ContinueResponse.cs" />
+    <Compile Include="LanguageServer\DefinitionResponse.cs" />
+    <Compile Include="DebugAdapter\DisconnectResponse.cs" />
+    <Compile Include="DebugAdapter\EvaluateResponse.cs" />
+    <Compile Include="DebugAdapter\InitializeResponse.cs" />
+    <Compile Include="DebugAdapter\LaunchResponse.cs" />
+    <Compile Include="LanguageServer\LocationResponseElements.cs" />
+    <Compile Include="DebugAdapter\NextResponse.cs" />
+    <Compile Include="LanguageServer\OccurrencesResponse.cs" />
+    <Compile Include="LanguageServer\QuickInfoResponse.cs" />
+    <Compile Include="LanguageServer\ReferencesResponse.cs" />
+    <Compile Include="DebugAdapter\ScopesResponse.cs" />
+    <Compile Include="DebugAdapter\SetBreakpointsResponse.cs" />
+    <Compile Include="DebugAdapter\SetExceptionBreakpointsResponse.cs" />
+    <Compile Include="LanguageServer\SignatureHelpResponse.cs" />
+    <Compile Include="LanguageServer\SignatureHelpRequest.cs" />
+    <Compile Include="LanguageServer\CompletionsResponse.cs" />
+    <Compile Include="LanguageServer\MessageErrorResponse.cs" />
+    <Compile Include="DebugAdapter\ResponseBase.cs" />
+    <Compile Include="DebugAdapter\SourceResponse.cs" />
+    <Compile Include="DebugAdapter\StackTraceResponse.cs" />
+    <Compile Include="DebugAdapter\StepInResponse.cs" />
+    <Compile Include="DebugAdapter\StepOutResponse.cs" />
+    <Compile Include="DebugAdapter\ThreadsResponse.cs" />
+    <Compile Include="DebugAdapter\VariablesResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
