First pass at implementing FindSymbolsVisitor and a few unit tests to test the functionality.

--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Language\FindOccurrencesResult.cs" />
     <Compile Include="Language\FindReferencesResult.cs" />
     <Compile Include="Language\FindReferencesVisitor.cs" />
+    <Compile Include="Language\FindSymbolsVisitor.cs" />
     <Compile Include="Language\FindSymbolVisitor.cs" />
     <Compile Include="Language\GetDefinitionResult.cs" />
     <Compile Include="Language\LanguageService.cs" />
