Rename Transport.Stdio library to Protocol
This change renames the PoweShellEditorServices.Transport.Stdio project to
PowerShellEditorServices.Protocol.  This change is in preparation for an
eventual move of this library out of this project and into a more general
package for VS Code language server and debug adapter authors.

--- a/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
+++ b/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Microsoft.PowerShell.EditorServices.Protocol</RootNamespace>
-    <AssemblyName>Microsoft.PowerShell.EditorServices.Transport.Stdio</AssemblyName>
+    <AssemblyName>Microsoft.PowerShell.EditorServices.Protocol</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
