--- a/test/PowerShellEditorServices.Test.Host/PowerShellEditorServices.Test.Host.csproj
+++ b/test/PowerShellEditorServices.Test.Host/PowerShellEditorServices.Test.Host.csproj
@@ -92,9 +92,9 @@
       <Project>{b2f6369a-d737-4afd-8b81-9b094db07da7}</Project>
       <Name>PowerShellEditorServices.Host</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\PowerShellEditorServices.Transport.Stdio\PowerShellEditorServices.Transport.Stdio.csproj">
+    <ProjectReference Include="..\..\src\PowerShellEditorServices.Protocol\PowerShellEditorServices.Protocol.csproj">
       <Project>{f8a0946a-5d25-4651-8079-b8d5776916fb}</Project>
-      <Name>PowerShellEditorServices.Transport.Stdio</Name>
+      <Name>PowerShellEditorServices.Protocol</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\PowerShellEditorServices\PowerShellEditorServices.csproj">
       <Project>{81e8cbcd-6319-49e7-9662-0475bd0791f4}</Project>
