Add handling of configuration events from client
This change introduces the 'workspace/didChangeConfiguration' notification
which the client will send to the language server when the user changes
their settings.  It also introduces a new configuration section for script
analysis settings so that the user can turn on/off script analysis.  More
settings will be added later.

--- a/src/PowerShellEditorServices.Host/PowerShellEditorServices.Host.csproj
+++ b/src/PowerShellEditorServices.Host/PowerShellEditorServices.Host.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DebugAdapter.cs" />
     <Compile Include="IMessageProcessor.cs" />
     <Compile Include="LanguageServer.cs" />
+    <Compile Include="LanguageServerSettings.cs" />
     <Compile Include="MessageLoop.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
