Add AppVeyor RDP config to appveyor.yml
This change adds a couple lines to appveyor.yml that can be used to enable
RDP access to the build server when something goes wrong.  To use this
configuration, the developer must uncomment the two lines and make another
commit to their PR branch.  Details are included in the config file.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,14 @@ branches:
   only:
   - master
 
+# NOTE: If you need to debug a problem with the AppVeyor build, uncomment the
+#       following two lines and push them to your PR branch.  Once the next
+#       build starts you will see RDP connection details written out to the
+#       build console.  **DON'T FORGET TO REMOVE THIS COMMIT BEFORE MERGING!**
+
+#init:
+#- ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 assembly_info:
   patch: true
   file: '**\AssemblyInfo.*'
