Fix #45, #63: Completion text replacement bugs
This change resolves a general class of issues around code completions
coming from the language service.  The JSON protocol allows the language
server to specify the range of code that will get replaced by a completion
item.  Previously this range was being computed incorrectly.  We now use
the replacement range given by the PowerShell API.

This also resolves PowerShell/vscode-powershell issues 45 and 12

--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -102,7 +102,9 @@
     <Compile Include="Session\SynchronizingConsoleHostWrapper.cs" />
     <Compile Include="Utility\Logger.cs" />
     <Compile Include="Utility\Validate.cs" />
+    <Compile Include="Workspace\BufferRange.cs" />
     <Compile Include="Workspace\FileChange.cs" />
+    <Compile Include="Workspace\BufferPosition.cs" />
     <Compile Include="Workspace\ScriptFile.cs" />
     <Compile Include="Workspace\ScriptFileMarker.cs" />
     <Compile Include="Workspace\ScriptRegion.cs" />
